refactored the code for bindings